# sf-reliable-collection-rs

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  bindings.txt
.github/workflows/: build.yaml  generate.yaml
.metadata/: ReliableCollectionRuntime.cpp  generate.proj
.windows/winmd/: Microsoft.ServiceFabric.ReliableCollectionRuntime.winmd
crates/fabric/c/: Cargo.toml  build.rs
crates/fabric/c/src/: lib.rs
crates/fabric/c/src/Microsoft/ServiceFabric/ReliableCollectionRuntime/: impl.rs  mod.rs
crates/fabric/reliable_collection/: Cargo.toml
crates/fabric/reliable_collection/src/: lib.rs  runtime.rs  wrap.rs
crates/libs/c/: Cargo.toml  build.rs  features.json
crates/libs/c/src/: Microsoft.rs  lib.rs
crates/libs/c/src/Microsoft/ServiceFabric/: mod.rs
crates/libs/c/src/Microsoft/ServiceFabric/ReliableCollectionRuntime/: impl.rs  mod.rs
crates/libs/core/: Cargo.toml
crates/libs/core/src/: lib.rs  wrap.rs
crates/libs/mssf-ext/: Cargo.toml
crates/libs/mssf-ext/src/: client.rs  data.rs  lib.rs  operation.rs  state_provider.rs  state_replicator.rs  stream.rs  traits.rs  types.rs
crates/samples/: CMakeLists.txt
crates/samples/kvmap/: CMakeLists.txt  Cargo.toml  build.rs
crates/samples/kvmap/manifests/: ApplicationManifest.xml
crates/samples/kvmap/manifests/KvMapServicePackage/: ServiceManifest.xml
crates/samples/kvmap/proto/: kvmap.proto
crates/samples/kvmap/src/: app.rs  data.rs  kvmap.rs  main.rs  rpc.rs  test.rs
crates/samples/kvstore/: CMakeLists.txt  Cargo.toml  build.rs
crates/samples/kvstore/kvcli/: main.rs
crates/samples/kvstore/manifests/: ApplicationManifest.xml
crates/samples/kvstore/manifests/KvStoreServicePackage/: ServiceManifest.xml
crates/samples/kvstore/proto/: kvstore.proto
crates/samples/kvstore/src/: kvstore.rs  main.rs  rpc.rs  utils.rs
crates/samples/rcstore/: CMakeLists.txt  Cargo.toml  build.rs
crates/samples/rcstore/manifests/: ApplicationManifest.xml
crates/samples/rcstore/manifests/RcStoreServicePackage/: ServiceManifest.xml
crates/samples/rcstore/proto/: rcstore.proto
crates/samples/rcstore/rccli/: main.rs
crates/samples/rcstore/src/: main.rs  rcstore.rs
crates/tools/api/: Cargo.toml
crates/tools/api/src/: main.rs
docs/: Development.md
include/: Internal.h  ReliableCollectionRuntime.h
scripts/: kvcli.ps1  kvmap_ctl.ps1  kvstore_ctl.sh  rccli.ps1  rcstore_ctl.ps1  rcstore_ctl.sh
