[workspace]
resolver = "2"
members = [
  "crates/tools/*",
  "crates/libs/*",
  "crates/samples/*"
]

[workspace.dependencies]
mssf-com = {version = "0.0.8"}
mssf-core = "0.0.8"
windows = {version = "0.57", features = [ "Win32_Foundation" ]}
windows-core = { version = "0.57" }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18",  default-features = false, features = ["fmt"]}
trait-variant = "0.1.1"
bytes = "1.6.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde_json = "1"
serde = {version = "1", features = ["derive"]}

# testing code not released in cargo yet
[patch.crates-io]
mssf-core = {git = "https://github.com/youyuanwu/service-fabric-rs-fork.git", rev = "dd46f7ea733892a57452c4d6389ae1fcdd4d2024"}
mssf-com = {git = "https://github.com/youyuanwu/service-fabric-rs-fork.git", rev = "dd46f7ea733892a57452c4d6389ae1fcdd4d2024"}