[package]
name = "reliable_collection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.fabric_c]
path = "../c"
features = [
  "ServiceFabric_ReliableCollectionRuntime",
  "Win32_Foundation"
]

[dependencies.fabric_base]
git = "https://github.com/youyuanwu/service-fabric-rs.git"
rev = "e2a2cd4a4019317061d1fdb043c322719f21399e"
features = [
    "implement",
    "ServiceFabric_FabricCommon",
    "ServiceFabric_FabricCommon_FabricRuntime",
    "Win32_Foundation"
]


# need to define some com interfaces
[dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation",
]

# tokio oneshot
[dependencies]
tokio = { version = "*", features = ["sync"] }