[package]
name = "sfrc-c"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
windows-core = "0.54"

[dependencies.windows]
version = "0.54"
features = [
    "Win32_Foundation",
]

[features]
Win32_Foundation = []
Foundation = []
implement = []
# generated features
ServiceFabric = ["Foundation"]
ServiceFabric_ReliableCollectionRuntime = ["ServiceFabric"]
