[package]
name = "sfrc-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sfrc-c]
path = "../c"
features = [
  "ServiceFabric_ReliableCollectionRuntime",
  "Win32_Foundation"
]

[dependencies.mssf-com]
version = "*"
features = [
    "implement",
    "ServiceFabric_FabricCommon",
    "ServiceFabric_FabricCommon_FabricRuntime",
    "Win32_Foundation"
]


# need to define some com interfaces
[dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation",
]

# tokio oneshot
[dependencies]
tokio = { version = "*", features = ["sync"] }