[package]
name = "sfrc-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sfrc-c]
path = "../c"

[dependencies]
mssf-com.workspace = true
# need to define some com interfaces
windows.workspace = true

# tokio oneshot
tokio = { version = "*", features = ["sync"] }