[package]
name = "kvmap"
version = "0.1.0"
edition = "2021"

[dependencies]
mssf-core.workspace = true
mssf-com.workspace = true
mssf-ext = {path = "../../libs/mssf-ext"}
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-util.workspace = true
windows-core.workspace = true
bytes.workspace = true
serde_json.workspace = true
serde.workspace = true
async-trait = "*" # needed by tonic
tonic = "*"
prost = "*"

[build-dependencies]
tonic-build = "*"
prost-build = "*"

[package.metadata.rust-analyzer]
cargo.loadOutDirsFromCheck = true