[package]
name = "kvstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
windows-core = "0.57"
mssf-com.workspace = true
mssf-core.workspace = true
tonic = "*"
prost = "*"

[build-dependencies]
tonic-build = "*"
prost-build = "*"

[package.metadata.rust-analyzer]
cargo.loadOutDirsFromCheck = true