[package]
name = "rcstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rccli"
path = "rccli/main.rs"

[dependencies]
log = "*"
env_logger = "*"
tokio.workspace = true
windows-core.workspace = true
windows.workspace = true
mssf-core.workspace = true
mssf-com.workspace = true
tonic.workspace = true
prost.workspace = true
clap.workspace = true

[dependencies.sfrc-core]
path = "../../libs/core"


[dependencies.sfrc-c]
path = "../../libs/c"

[build-dependencies]
tonic-build.workspace = true
prost-build.workspace = true

[package.metadata.rust-analyzer]
cargo.loadOutDirsFromCheck = true
